DABOM-274 fix : 불필요한 메서드 정리